squashing bugs

--- a/src/assets/globals.css
+++ b/src/assets/globals.css
@@ -16,7 +16,7 @@ body {
 #app {
   background-image: url("app.jpg");
   background-size: cover;
-  background-position: bottom;
+  background-position: center;
   transition: 0.4s;
 }
 
@@ -45,43 +45,4 @@ main {
     rgba(0, 0, 0, 0.75)
   );
   transition: background-image 0.4s ease-in-out;
-}
-
-/* Tailwind Customization */
-.search-bar input {
-  border-radius: 50px;
-  font-size: 1.25rem;
-  padding: 1rem;
-  border: 2px solid #3498db;
-  background-color: rgba(255, 255, 255, 0.7);
-  width: 100%;
-}
-
-.search-bar input:focus {
-  outline: none;
-  border-color: #16a085;
-}
-
-.weather-card {
-  text-align: center;
-  max-width: 600px;
-  background-color: rgba(255, 255, 255, 0.25);
-  padding: 2rem;
-  border-radius: 1rem;
-  margin: 1rem;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
-}
-
-.weather-card .location {
-  margin-bottom: 1rem;
-}
-
-.weather-card .weather-details {
-  margin-top: 2rem;
-}
-
-.weather-card .weather-details .details-box {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  gap: 20px;
 }
